--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "echarts": "^4.9.0",
     "element-ui": "^2.15.12",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.14",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
@@ -21,6 +24,7 @@
     "@vue/cli-service": "~5.0.0",
     "axios": "^0.18.0",
     "vue-cli-plugin-axios": "^0.0.4",
+    "vue-cli-plugin-charts": "^1.0.4",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.14"
   },
