--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "axios": "^0.18.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "vue-cli-plugin-axios": "^0.0.4",
     "vue-cli-plugin-charts": "^1.0.4",
     "vue-cli-plugin-element": "^1.0.1",
