--- a/carclub/src/main/resources/application.properties
+++ b/carclub/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.datasource.name=defaultDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/carclub1?serverTimezone=UTC
 # 数据库用户名&密码：
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 
 
