--- a/RefuseClassification_backend/src/main/resources/application.properties
+++ b/RefuseClassification_backend/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # 数据源名称
 spring.datasource.name=defaultDataSource
 # 数据库连接地址
-spring.datasource.url=jdbc:mysql://localhost:3306/carclub1?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://182.92.76.124:3308/refuse?serverTimezone=UTC
 # 数据库用户名&密码：
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=zhaozhao
 
 
