--- a/RefuseClassification_backend/pom.xml
+++ b/RefuseClassification_backend/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.exampl</groupId>
-    <artifactId>carclub</artifactId>
+    <artifactId>rubbish_classification</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>carclub</name>
-    <description>carclub</description>
+    <name>rubbish_classification</name>
+    <description>rubbish_classification</description>
 
     <properties>
         <java.version>1.8</java.version>
